# m5core2v1-1_demo_rust

./: Cargo.toml  README.md  build.rs  espflash.toml
scripts/: set_time.py
src/: ble.rs  display.rs  lib.rs  pd.rs  pmic.rs  slint_platform.rs
ui/: main.slint
