[package]
edition      = "2024"
name         = "m5core2v1-1_esp-hal_demo"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "m5core2v1-1_esp-hal_demo"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { path = "../esp-hal/esp-hal", features = ["esp32", "log-04", "unstable", "psram"] }

esp-rtos = { path = "../esp-hal/esp-rtos", features = [
  "embassy",
  "esp-alloc",
  "esp32",
  "log-04",
] }

esp-bootloader-esp-idf = { path = "../esp-hal/esp-bootloader-esp-idf", features = ["esp32", "log-04"] }
log                    = "0.4.27"

embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-time = { version = "0.5.0", features = ["log"] }
esp-alloc = { path = "../esp-hal/esp-alloc" }
esp-backtrace = { path = "../esp-hal/esp-backtrace", features = [
  "esp32",
  "panic-handler",
  "println",
] }
esp-println = { path = "../esp-hal/esp-println", features = ["esp32", "log-04"] }

critical-section = "1.2.0"
static_cell      = "2.1.1"
heapless         = "0.8"

# PMIC (AXP2101) driver
axp2101-dd = { path = "../axp2101-dd", features = ["log"] }
embedded-hal = "1.0"
embedded-hal-async = "1.0"

# Display driver
lcd-async = { path = "../lcd-async" }
embedded-graphics = "0.8"
embassy-embedded-hal = "0.5"
embassy-sync = "0.7"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
