[package]
edition      = "2024"
name         = "m5core2v1-1_esp-hal_demo"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "m5core2v1-1_esp-hal_demo"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { git = "https://github.com/esp-rs/esp-hal", rev = "04c4243c", features = ["esp32", "log-04", "unstable", "psram"] }

esp-rtos = { git = "https://github.com/esp-rs/esp-hal", rev = "04c4243c", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32",
  "log-04",
] }

esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal", rev = "04c4243c", features = ["esp32", "log-04"] }
log                    = "0.4.27"

embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-time = { version = "0.5.0", features = ["log"] }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal", rev = "04c4243c" }
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal", rev = "04c4243c", features = [
  "esp32",
  "panic-handler",
  "println",
] }
esp-println = { git = "https://github.com/esp-rs/esp-hal", rev = "04c4243c", features = ["esp32", "log-04"] }

critical-section = "1.2.0"
static_cell      = "2.1.1"
heapless         = "0.8"

# PMIC (AXP2101) driver
axp2101-dd = { version = "0.2.3", features = ["log"] }
embedded-hal = "1.0"
embedded-hal-async = "1.0"

# Display driver
lcd-async = "0.1.1"
embedded-graphics = "0.8"
embassy-embedded-hal = "0.5"
embassy-sync = "0.7"
ft6336u-dd = { version = "0.1.0", features = ["log"] }
slint = { git = "https://github.com/okhsunrog/slint", branch = "rgb565-be", default-features = false, features = ["unsafe-single-threaded", "libm", "renderer-software", "compat-1-2"] }
allocator-api2 = { version = "0.3.0", default-features = false, features = ["alloc"] }
ina3221-dd = { version = "0.1.0", features = ["log"] }
pcf8563-dd = { version = "0.3.0", features = ["log"] }

# BLE
esp-radio = { git = "https://github.com/esp-rs/esp-hal", rev = "04c4243c", features = [
  "ble",
  "esp-alloc",
  "esp32",
  "log-04",
  "unstable",
] }
trouble-host = { version = "0.6.0", features = ["derive"] }
bt-hci = "0.8.0"
embassy-futures = "0.1"
bytemuck = "1.25.0"

# USB PD
fusb302b = { path = "../fusb302b", features = ["log"] }
usbpd = { git = "https://github.com/elagil/usbpd.git", branch = "main", features = ["log"] }
usbpd-traits = { git = "https://github.com/elagil/usbpd.git", branch = "main" }
uom = { version = "0.36", default-features = false, features = ["f32", "si"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

[build-dependencies]
slint-build = { git = "https://github.com/okhsunrog/slint", branch = "rgb565-be" }
